--- a/trek.css
+++ b/trek.css
@@ -8,6 +8,12 @@
     display: inline-block;
     font-size: 16px;
 }
+header{
+  height:200px;
+  background-color: lightblue;
+
+}
+
 
 td {
   /*width: 200;*/
