--- a/trek.css
+++ b/trek.css
@@ -1,3 +1,29 @@
+
+/*#wrapper{
+  background-image: url('https://goo.gl/ik2Rk9');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  z-index: 0,
+  opacity: 0.5;
+}*/
+html, body{
+  height: 100%;
+}
+body {
+			background-image: url("https://goo.gl/ik2Rk9") ;
+			background-position: center center;
+			background-repeat:  no-repeat;
+			background-attachment: fixed;
+			background-size:  cover;
+			background-color: #999;
+
+}
+
+
+
 #load {
     background-color: #4CAF50; /* Green */
     border: none;
