--- a/trek.css
+++ b/trek.css
@@ -28,12 +28,12 @@ html, body{
     font-size: 20px;
 }
 
-.success{
-  background-color: #4CAF50; /* Green */
+#continent{
+  background-color: transparent;
   /*float:left;*/
   border-radius: 50%;
   color: white;
-  padding: 15px 32px;
+  padding: 20px 35px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
