--- a/trek.css
+++ b/trek.css
@@ -6,18 +6,22 @@ html, body{
   height: 100%;
   /*font-family: 'Acme';*/
   font-family: 'Alegreya Sans';
-
   font-style: italic;
 
 }
-/*#load{
-  float:left;
-  border-radius: 50%;
-  display: inline-block;
-}*/
-
+.about-trip{
+  z-index: 10;
+  /*background-color: white;*/
+  opacity: 70%;
+  font-size: 2em;
+}
 #load {
-    background-color: #4CAF50; /* Green */
+    /*margin-top: 25px;
+    margin-right:50px;*/
+    margin-top: 20px;
+
+    background-color: #4CAF50;
+
     float:left;
     border-radius: 50%;
     color: white;
@@ -28,12 +32,17 @@ html, body{
     font-size: 20px;
 }
 
-#continent{
-  background-color: transparent;
+#button-continent{
+  /*margin-top: 25px;*/
+  margin-top: 20px;
+
+  background-color: #4CAF50; /* Green */
   /*float:left;*/
   border-radius: 50%;
   color: white;
-  padding: 20px 35px;
+  padding: 15px 32px;
+
+  /*padding: 10px 10px;*/
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -46,9 +55,12 @@ html, body{
 }
 
 .header{
+  margin-top: 20px;
   font-family: "Damion";
-  float: right;
+  /*float: right;*/
   color: white;
+  font-size: 2em;
+  z-index: -4;
 }
 
 body,h1,h2{
@@ -59,6 +71,7 @@ body,h1,h2{
 }
 body {
 			background-image: url("https://goo.gl/ik2Rk9") ;
+      background-image: url("https://goo.gl/SEr8ya") ;
       /*background-image: url("https://goo.gl/vlQ3Ba") ;*/
 
 			background-position: center center;
@@ -98,4 +111,11 @@ td,p {
 }
 label {
   font-size: 1.5em;
+}
+#one-trip {
+  background: none;
+}
+.remove{
+  background: none;
+
 }
