--- a/trek.css
+++ b/trek.css
@@ -4,50 +4,33 @@
 
 html, body{
   height: 100%;
-  /*font-family: 'Acme';*/
   font-family: 'Alegreya Sans';
   font-style: italic;
+}
 
-}
-.about-trip{
-  z-index: 10;
-  /*background-color: white;*/
-  opacity: 70%;
-  font-size: 2em;
-}
 #load {
-    /*margin-top: 25px;
-    margin-right:50px;*/
-    margin-top: 20px;
-
-    background-color: #4CAF50;
-
-    float:left;
-    border-radius: 50%;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 20px;
-}
-
-#button-continent{
-  /*margin-top: 25px;*/
   margin-top: 20px;
-
-  background-color: #4CAF50; /* Green */
-  /*float:left;*/
+  background-color: #4CAF50;
+  float:left;
   border-radius: 50%;
   color: white;
   padding: 15px 32px;
-
-  /*padding: 10px 10px;*/
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 20px;
+}
 
+#button-continent{
+  margin-top: 20px;
+  background-color: #4CAF50;
+  border-radius: 50%;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
 }
 
 #trips-continent{
@@ -57,7 +40,6 @@ html, body{
 .header{
   margin-top: 20px;
   font-family: "Damion";
-  /*float: right;*/
   color: white;
   font-size: 2em;
   z-index: -4;
@@ -67,25 +49,21 @@ body,h1,h2{
   font-family: 'Acme';
   font-style: italic;
   text-shadow: -1px 0 blac, 0  1px blac, 1px 0 blac, 0  -1px blac;
-
 }
-body {
-			background-image: url("https://goo.gl/ik2Rk9") ;
-      background-image: url("https://goo.gl/SEr8ya") ;
-      /*background-image: url("https://goo.gl/vlQ3Ba") ;*/
 
-			background-position: center center;
-			background-repeat:  no-repeat;
-			background-attachment: fixed;
-			background-size:  cover;
-			background-color: #999;
+body {
+  background-image: url("https://goo.gl/ik2Rk9") ;
+  /*background-image: url("https://goo.gl/SEr8ya") ;*/
+  background-position: center center;
+  background-repeat:  no-repeat;
+  background-attachment: fixed;
+  background-size:  cover;
 }
 
 header{
   height:100px;
   background-color: green;
   text-align: center;
-
 }
 
 table thead,
@@ -94,18 +72,24 @@ table tbody {
 }
 
 td,p {
-  /*width: 200;*/
   text-align: left;
   font-size: 2em;
 }
 
-#about-trip {
-  background: white;
+.about-trip {
+  z-index: 4;
+  /*color: blue;*/
+  padding: 20px;
+  background-color: lightyellow;
   text-align: justify;
+  font-size: 2em;
+
 }
+
 label {
   font-size: 1.5em;
 }
-.onetrip-background {
-  background: none;
+
+input{
+  background-color: lightyellow;
 }
